# quantbox

./: .envrc  .gitignore  CLEANUP_SUMMARY.md  CONFIGURATION.md  FINAL_OPTIMIZATION_REPORT.md  GM_ADAPTER_STATUS.md  GM_PLATFORM_SUPPORT.md  GM_WINDOWS_TEST_SUCCESS.md  LICENSE  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PLATFORM_SUPPORT_CORRECTIONS.md  PUBLISH_GUIDE.md  README.md  RELEASE.md  build_exe.py  example.config.toml  main.py  package-lock.json  pyproject.toml  requirements.txt  setup.py  test_data.py  test_date_refactor_simple.py  test_date_utils_standalone.py
.claude/: settings.local.json
.github/: CONTRIBUTING.md  DESCRIPTION.md
.github/workflows/: python-test.yml
benchmarks/: performance_baseline.py
biz/: holding_stats.py
docker/qb-base/: database.yaml  database.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASYNC_GUIDE.md  ASYNC_IMPLEMENTATION_REPORT.md  MIGRATION_GUIDE.md  NOGIL_TESTING_GUIDE.md  QUICK_START.md  coding_standards.md  contract_utils_refactor_summary.md  data.md  gui.md  refactor_design.md  refactor_progress.md  trade_dates.md
docs/prd/: trade_dates_refactor.md
docs/pull_requests/: optimize_trade_dates.md
docs/refactors/: FILE_ORGANIZATION.md  QUICKREF.md  README.md  date_utils_refactor_complete.md  date_utils_refactor_summary.md
docs/technical/: design.md  futures.md
examples/: async_example.py  cache_warmup_example.py  config.json  data_validation.py  date_utils_refactor_comparison.py  fetcher_example.py  trade_date_utils.py
quantbox/: __init__.py  __main__.py  cli.py  cli_async.py  config.py  logger.py  shell.py  shell_async.py  user_config.py  validators.py
quantbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quantbox/adapters/: __init__.py  base.py  formatters.py  gm_adapter.py  local_adapter.py  ts_adapter.py
quantbox/adapters/asynchronous/: __init__.py  base.py  gm_adapter.py  local_adapter.py  ts_adapter.py  utils.py
quantbox/cli/: __init__.py  main.py  shell.py  trade_dates.py
quantbox/config/: __init__.py  config_loader.py  exchanges.toml  fees_margin.toml  instruments.toml  trading_hours.toml
quantbox/config/templates/: config.toml
quantbox/core/: __init__.py  config.py
quantbox/core/config/: __init__.py  api_config.py  cache_config.py  config_loader.py  database_config.py  exchange_codes.py  exchange_config.py  log_config.py  trade_config.py
quantbox/core/data/: __init__.py  trading_calendar.py
quantbox/data/: __init__.py
quantbox/data/database/: __init__.py  base.py  mongo_manager.py
quantbox/data/fetcher/: __init__.py  base.py  base_fetcher.py  tushare_fetcher.py
quantbox/fetchers/: __init__.py  base.py  base_fetcher.py  cache.py  config.py  fetcher_goldminer.py  fetcher_tushare.py  local_fetch.py  local_fetcher.py  monitoring.py  remote_fetch_gm.py  remote_fetch_tushare.py  remote_fetcher.py  utils.py  validation.py
quantbox/gui/: main_window.py
quantbox/savers/: __init__.py  data_saver.py  market_data_saver.py  save_tushare.py
quantbox/services/: __init__.py  async_data_saver_service.py  async_market_data_service.py  data_saver_service.py  market_data_service.py
quantbox/util/: basic.py  cache_warmup.py  contract_exchange_mapping.toml  contract_utils.py  contract_utils_new.py  date_utils.py  date_utils_old.py  exchange_utils.py  exchange_utils_new.py  tools.py
quantbox/utils/: trade_date.py
scripts/: README.md  benchmark_trade_dates.py  check_trade_dates.py  diagnose_config.py  migrate_trade_date.py  quick_validation.py  run_gui.py  save_data.py  save_future_contracts.py  save_trade_dates.py  test_all_adapters.py  test_gm_code_logic.py  test_gm_download.py  test_gm_functionality.py  test_tushare_format.py
templates/: config.toml
tests/: test.ini  test_adapters_base.py  test_config.py  test_contract_utils.py  test_contract_utils_refactor.py  test_data_integrity.py  test_data_saver_service.py  test_date_utils.py  test_exchange_utils.py  test_exchange_utils_refactor.py  test_fetcher_tushare.py  test_fetchers.py  test_formatters.py  test_future_contracts.py  test_future_contracts_integration.py  test_future_contracts_integrity.py  test_gm_adapter.py  test_local_adapter.py  test_local_fetcher.py  test_market_data_service.py  test_savers.py  test_shell.py  test_tools.py  test_trade_date_fetcher.py  test_trade_dates.py  test_trade_dates_integration.py  test_tushare_exchange_mapping.py
tests/async/: __init__.py  conftest.py  test_async_adapters.py  test_async_services.py
tests/data/database/: test_mongo_manager.py
tests/data/fetcher/: test_config.toml  test_tushare_fetcher.py
tests/manual/: test_trade_dates.md
tests/utils/: mock_data.py  mock_db.py  mock_fetcher.py  test_config.py  test_trade_date.py
